train yolov5 on ccpd

--- a/.gitignore
+++ b/.gitignore
@@ -28,11 +28,10 @@ runs/*
 data/*
 data/images/*
 !data/*.yaml
+!data/*.py
 !data/hyps
 !data/scripts
 !data/images
-!data/images/zidane.jpg
-!data/images/bus.jpg
 !data/*.sh
 
 results*.csv
